# allotropic

./: .gitmodules
rust/: .gitignore
rust/jonhoo/boks/: Cargo.toml
rust/jonhoo/boks/src/: lib.rs  main.rs
rust/jonhoo/cell/: Cargo.toml
rust/jonhoo/cell/src/: main.rs
rust/jonhoo/pointers/src/: cell.rs  lib.rs  rc.rs  rc_old.rs  refcell.rs
rust/jonhoo/strtok/src/: lib.rs  main.rs
rust/play/asyncwot/: Cargo.toml
rust/play/asyncwot/src/: main.rs
rust/play/audspect/: Cargo.toml
rust/play/audspect/src/: main.rs
rust/play/c-bigdecimal/: Cargo.toml
rust/play/c-bigdecimal/src/: main.rs
rust/play/c-colorgrad/: Cargo.toml
rust/play/c-colorgrad/src/: main.rs
rust/play/c-mio/: Cargo.toml
rust/play/c-mio/src/: main.rs
rust/play/c-ndarray/: Cargo.toml
rust/play/c-ndarray/src/: main.rs
rust/play/c-plotters/: Cargo.toml
rust/play/c-plotters/src/: main.rs
rust/play/c-typenum/: Cargo.toml
rust/play/c-typenum/src/: main.rs
rust/play/c-vga/: Cargo.toml
rust/play/c-vga/src/: main.rs
rust/play/celestial/: Cargo.toml
rust/play/celestial/src/: julian_day.rs  lib.rs  main.rs
rust/play/celestial/tests/: ch3.rs  ch4.rs
rust/play/hello_ockam/: Cargo.toml
rust/play/hello_ockam/examples/: 02-worker.rs
rust/play/hello_ockam/src/: lib.rs
rust/play/keytf8/: Cargo.toml
rust/play/keytf8/src/: lib.rs  main.rs
rust/play/memory/: Cargo.toml
rust/play/mini-tokio/: Cargo.toml
rust/play/mutex/: Cargo.toml
rust/play/mutex/src/: main.rs
rust/play/nitz/: Cargo.toml
rust/play/nitz/src/: lib.rs
rust/play/ntz/: .gitignore  Cargo.toml  exp.rs
rust/play/ntz/src/: angle.rs  float.rs  lib.rs  main.rs  scalar.rs  si.rs  temperature.rs  time.rs
rust/play/ntz/tests/: conversions.rs
rust/play/ockam_cp/: Cargo.toml
rust/play/realt/: Cargo.toml
rust/play/realt/src/: main.rs
rust/play/scratch/biheaprev/: Cargo.toml
rust/play/scratch/biheaprev/src/: main.rs
rust/play/scratch/bunchathreads/: Cargo.toml
rust/play/scratch/bunchathreads/src/: main.rs
rust/play/scratch/cofifo/: Cargo.toml
rust/play/scratch/cofifo/src/: main.rs
rust/play/scratch/cow/: Cargo.toml
rust/play/scratch/cow/src/: main.rs
rust/play/scratch/envvar/: Cargo.toml
rust/play/scratch/envvar/src/: main.rs
rust/play/scratch/flatmap/: Cargo.toml
rust/play/scratch/flatmap/src/: main.rs
rust/play/scratch/fmt/: Cargo.toml
rust/play/scratch/fmt/src/: main.rs
rust/play/scratch/genco/: Cargo.toml
rust/play/scratch/genco/src/: main.rs
rust/play/scratch/jong-pin/: Cargo.toml
rust/play/scratch/jong-pin/src/: main.rs
rust/play/scratch/libpulse/: Cargo.toml
rust/play/scratch/libpulse/src/: main.rs
rust/play/scratch/markerdb/: Cargo.toml
rust/play/scratch/markerdb/src/: main.rs
rust/play/scratch/myiterator/: Cargo.toml
rust/play/scratch/myiterator/src/: main.rs
rust/play/scratch/rcraw/: Cargo.toml
rust/play/scratch/rcraw/src/: main.rs
rust/play/scratch/rcrefscope/: Cargo.toml
rust/play/scratch/rcrefscope/src/: main.rs
rust/play/scratch/selfrefstruct/: Cargo.toml
rust/play/scratch/selfrefstruct/src/: main.rs
rust/play/scratch/thrdtimer/: Cargo.toml
rust/play/scratch/thrdtimer/src/: main.rs
rust/play/scratch/tokio-single-thread/: Cargo.toml
rust/play/scratch/tokio-single-thread/src/: main.rs
rust/play/scratch/uni-trait-type/: Cargo.toml
rust/play/scratch/uni-trait-type/src/: main.rs
rust/play/scratch/wavelet/: Cargo.toml
rust/play/seg/: Cargo.toml
rust/play/seg/src/: main.rs
rust/play/slicejoin/: Cargo.toml
rust/play/slicejoin/src/: main.rs
rust/play/threadpool/: Cargo.toml
rust/play/threadpool/src/: lib.rs
rust/play/time_units/: Cargo.toml
rust/play/time_units/src/: main.rs
rust/play/timer/: Cargo.toml  README.md
rust/play/timer/old/: main.crazy.rs  main.rchack.rs  main.rs.old  main.works.rs
rust/play/timer/src/: main.rs
rust/play/tuner/: Cargo.toml
rust/play/tuner/src/: main.rs
rust/play/unitz/: Cargo.toml  main.bak.rs
rust/play/unitz/src/: main.rs
rust/play/variance/: Cargo.toml  book.toml
rust/play/variance/src/: chapter_1.md  main.rs
rust/play/weather/: Cargo.toml  exp.rs  test.json
rust/play/weather/src/: .main.rs.rustfmt  cache.rs  client.rs  config.rs  error.rs  forecast.rs  lib.rs  location.rs  main.rs  types.rs
rust/play/weather/tests/: cache.rs  common.rs  forecast.rs  get_point.rs  gridpoint_data.rs
rust/play/weather/tests/json/: forecast.json  get_point.json  gridpoint_data.json
rust/play/yougnats/: Cargo.toml
rust/play/yougnats/src/: main.rs
work/: Cargo.toml
(+1 files in other folders)
