[package]
name = "audspect"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
crossterm = "0.19.0"
decorum = "0.3.1"
microfft = "0.4.0"
num-traits = "0.2.14"
plotters = "0.3.0"
rustfft = "5.0.1"
structopt = "0.3.21"
#spectrum-analyzer = "0.5.0"
