[package]
name = "c-colorgrad"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
colorgrad = "0.4.0"
cpal = "0.13.1"
crossterm = "0.19.0"
ctrlc = "3.1.8"
ndarray = "0.15.1"
num-traits = "0.2.14"
rustfft = "5.0.1"
tokio = { version = "1.5.0", features = ["full"] }
