[package]
name = "timer"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7.11", features = ["os-poll"] }
tokio = { version = "1.6", features = ["sync"] }
