[package]
name = "weather"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
geojson = "0.22.2"
reqwest = { version = "0.11.3", features = ["json"] }
rusqlite = "0.25.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["macros"] }

[dev-dependencies]
tempfile = "3.2.0"
wiremock = "0.5.3"
