[package]
name = "weather"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
colorgrad = "0.4.0"
crossterm = "0.20.0"
geojson = "0.22.2"
reqwest = { version = "0.11.3", features = ["json"] }
rusqlite = { version = "0.25.3", features = ["chrono"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sunrise = "1.0.0"
tokio = { version = "1.6.1", features = ["macros"] }

[dev-dependencies]
tempfile = "3.2.0"
wiremock = "0.5.3"
