[package]
name = "wthr"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["weather", "nws", "forecast", "cli", "types"]
categories = ["command-line-utilities", "web-programming::http-client"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
clap = "2.33.3"
colorgrad = "0.4.0"
crossterm = "0.20.0"
esbat = "0.1.0"
geojson = "0.22.2"
home = "0.5.3"
reqwest = { version = "0.11.3", features = ["json"] }
rusqlite = { version = "0.25.3", features = ["chrono"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
sunrise = "1.0.0"
tokio = { version = "1.6.1", features = ["macros"] }
toml = "0.5.8"
url = "2.2.2"

[dev-dependencies]
tempfile = "3.2.0"
wiremock = "0.5.3"
